--- a/Laboratorio/ecommerce/client/media/index.html
+++ b/Laboratorio/ecommerce/client/media/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/ecommerce/client/media/styles.css">
     <title>Document</title>
 </head>
 <body>
@@ -18,8 +18,8 @@
     <div class="modal-overlay" id="modal-overlay"></div>
     <div class="modal-container" id="modal-container"></div> 
 
-    <script src="/client/js/products.js"></script>
-    <script src="/client/js/index.js"></script>
-    <script src="/client/js/cart.js"></script>
+    <script src="/ecommerce/client/js/products.js"></script>
+    <script src="/ecommerce/client/js/index.js"></script>
+    <script src="/ecommerce/client/js/cart.js"></script>
 </body>
 </html>
